# SpectrumAnalyzer

./: .clang-format  CMakeLists.txt  ReadMe.md
resources/: resource.h
src/app/: Application.cpp  Application.h  CMakeLists.txt  GraphBox.cpp  GraphBox.h  IAudioDataCapturer.h  IGUI.h  IObserver.h  ISpectrumAnalyser.h  Kursach.rc  RingBuffer.h  SettDialog.cpp  SettDialog.h  SettStructs.h  SpectrumAnalyser.cpp  SpectrumAnalyser.h  WindowFunc.h  WndInitializer.cpp  WndInitializer.h  main.cpp  stdafx.h
src/capturer/: AudioDataCapturer.cpp  AudioDataCapturer.h  CMakeLists.txt  RingBuffer.h  audio_data_capturer_observable.h
src/capturer/AudioDevicesGetter/: audio_devices_getter.cpp  audio_devices_getter.h
src/capturer/raii/: api_wrappers.h  raii_base.h
src/gui/: Application.cpp  Application.h  CMakeLists.txt  GraphBox.cpp  GraphBox.h  IAudioDataCapturer.h  IGUI.h  SettDialog.cpp  SettDialog.h  SettStructs.h  WndInitializer.cpp  WndInitializer.h
src/interface/: CMakeLists.txt
src/interface/observer/: observable.h  observable_controller_getter.h  observable_impl.h  observer_controller.h
src/interface/raii/: propagate_const_ptr.h
